# vype

./: AGENTS.md  Cargo.toml  README.md  install.sh  test_e2e_auto.sh  vype-dev-cuda.service  vype-dev-vulkan.service  vype-dev.service
.github/workflows/: release.yml
src/: actors.rs  audio.rs  config.rs  keyboard.rs  lib.rs  main.rs  model.rs  transcriber.rs
src/pure/: edit_distance.rs  mod.rs  resample.rs  synth_audio.rs  typer.rs  typing_state.rs
src/sources/: cpal_audio.rs  dbus_service.rs  fakes.rs  mod.rs  rdev_keyboard.rs  whisper_transcriber.rs  xdo_keyboard.rs
tests/: actors_test.rs  audio_actor_test.rs  audio_source_test.rs  config_test.rs  e2e.sh  edit_distance_test.rs  fakes_test.rs  keyboard_actor_test.rs  partial_transcription_test.rs  resample_test.rs  sources_test.rs  synth_audio_test.rs  transcriber_actor_test.rs  typer_test.rs  typing_state_test.rs
vype-shared/: Cargo.toml
vype-shared/src/: lib.rs
vypec/: Cargo.toml
vypec/src/: main.rs
vyped/: Cargo.toml
vyped/src/: audio.rs  main.rs  transcriber.rs
