[package]
name = "vype"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[features]
default = ["transcription"]
transcription = ["whisper-rs"]

[dependencies]
cpal = "0.15"
rubato = "0.15"
hf-hub = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }
ringbuf = "0.4"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
rdev = "0.5"
libxdo = "0.6"
whisper-rs = { version = "0.15", features = ["vulkan"], optional = true }

[dev-dependencies]
tempfile = "3"