[package]
name = "vype"
version = "0.0.1"
edition = "2024"
license = "GPL-2.0-only"

[features]
default = []
cpu = ["dep:whisper-rs", "dep:zbus"]
vulkan = ["dep:whisper-rs", "whisper-rs/vulkan", "dep:zbus"]
cuda = ["dep:whisper-rs", "whisper-rs/cuda", "dep:zbus"]
dbus = ["dep:zbus"]

[dependencies]
cpal = "0.15"
rubato = "0.15"
hf-hub = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "5"
clap = { version = "4", features = ["derive"] }
ringbuf = "0.4"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
libxdo = "0.6"
zbus = { version = "5", optional = true }
tokio = { version = "1", features = ["rt", "sync", "time"] }
whisper-rs = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"
