[package]
name = "vyped"
version = "0.0.1"
edition = "2024"
license = "GPL-2.0-only"

[[bin]]
name = "vyped"
path = "src/main.rs"

[dependencies]
vype-shared = { path = "../vype-shared" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
iceoryx2 = "0.8"
iceoryx2-bb-log = "0.7"
ctrlc = "3"
libxdo = "0.6"
rdev = "0.5"
cpal = "0.15"
rubato = "0.15"
hf-hub = "0.3"
dirs = "5"
whisper-rs = { version = "0.15", optional = true }
notify-rust = "4"

[features]
default = ["cpu"]
cpu = ["dep:whisper-rs"]
vulkan = ["dep:whisper-rs", "whisper-rs/vulkan"]
cuda = ["dep:whisper-rs", "whisper-rs/cuda"]
